--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=10d4bf206eaa033266d48ba350062016
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/e-boutique?serverVersion=8.0.32&charset=utf8mb4"
-#DATABASE_URL="mysql://gamealley:lg348Da_@mysql-gamealley.alwaysdata.net:3306/gamealley_eboutique?serverVersion=10.6.17-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/e-boutique?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://gamealley:lg348Da_@mysql-gamealley.alwaysdata.net:3306/gamealley_eboutique?serverVersion=10.6.17-MariaDB&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
